[gd_scene load_steps=3 format=3 uid="uid://ewau5vl07l"]

[ext_resource type="Script" path="res://scripts/title_text.gd" id="1_c28on"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tq5rw"]

[node name="title_text" type="Node2D"]
script = ExtResource("1_c28on")

[node name="Title" type="Label" parent="."]
offset_left = -324.0
offset_top = 25.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 65
text = "Title
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play_Button" type="Label" parent="."]
offset_left = -324.0
offset_top = 150.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 45
text = "play
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="play_area" type="Area2D" parent="Play_Button"]

[node name="area_shape" type="CollisionShape2D" parent="Play_Button/play_area"]
position = Vector2(162, 45)
scale = Vector2(6, 3)
shape = SubResource("RectangleShape2D_tq5rw")

[node name="Options_Button" type="Label" parent="."]
offset_left = -324.0
offset_top = 250.0
offset_bottom = 325.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 45
text = "options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits_Button" type="Label" parent="."]
offset_left = -324.0
offset_top = 350.0
offset_bottom = 425.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 45
text = "credits"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="Play_Button/play_area" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="Play_Button/play_area" to="." method="_on_play_mouse_exited"]
